@@ -961,8 +961,7 @@ tny_camel_folder_refresh_async_thread (gpointer thr_user_data)
 	info->cancelled = camel_operation_cancel_check (apriv->cancel);
 
 	priv->cached_length = camel_folder_get_message_count (priv->folder);
-	if (G_LIKELY (priv->folder) && CAMEL_IS_FOLDER (priv->folder) && G_LIKELY (priv->has_summary_cap))
-		priv->unread_length = (guint)camel_folder_get_unread_message_count (priv->folder);
+	priv->unread_length = (guint)camel_folder_get_unread_message_count (priv->folder);
 	update_iter_counts (priv);
 
 	_tny_camel_account_stop_camel_operation (TNY_CAMEL_ACCOUNT (priv->account));
