@@ -1,3 +1,7 @@
+2007-07-04  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* Total count of POP3 folders
+
 2007-07-03  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* Bugfix in TnyCamelTransportAccount's prepare method
